# classwork

./: .gitignore  README.md  bases.py  meta.py  pyproject.toml
classwork/: __init__.py  bases.py  classes.py  codecs.py  enums.py  meta.py
classwork/usr/: __init__.py
classwork/usr/examples/: smol.py
