[tool.poetry]
name = "classwork"
version = "0.1.0"
description = "A dummy package for playing with metclasses, abcs, codecs, etc..."
authors = ["Ewan Wakeman <ewan.wakeman@nhs.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"
logzero = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
